Monday, 8 August 2022: Version 0.8.3
        Users can now use the "info" command to view live information.

Thursday, 28 July 2022: Version 0.8.2
        Fixed the bug that directory naming failed when saving some series videos.

Sunday, 10 July 2022: Version 0.8.1
        Allowed users to view the size of encrypted videos.

Tuesday, 28 June 2022: Version 0.8.0
        Fixed the problem that the live broadcast could not be recorded due to the change of the URL of the .ts files.
        Added prompts for downloading quick replay and official replay videos.
        Added "version" command for checking the latest version.
        Added "--replay" flag for downloading replay videos.
        Fixed the bug that file naming failed when saving some videos.
        Upgraded dependencies.

Friday, 8 April 2022: Version 0.7.2
        Fixed the bug that the second digit of the mobile phone number cannot be 9.

Friday, 15 July 2021: Version 0.7
        Added "login" and "logout" commands for handling the token.
        Added "--quality" flag that allows users to download videos of various qualities.
        Allowed users to download paid videos that they own.
        Fixed the issue that the information of paid videos could not be displayed.
        Rewrote the code of "slide.go".
        Updated the calling code of KouShare API.
        Moved MyGetRequest function from live package to user package.
        Changed the Golang version from 1.15 to 1.16.
        Used UPX to compact the binary file.

Friday, 5 February 2021: Version 0.5
        Changed the structure of this project.
        Added "record" and "merge" commands for recording the lives.
        Added "slide" command for downloading coursewares.
        Added "--qpdf-bin" flag for optimizing pdf files automatically.
        Added "-@", "--autoMerge" and other flags.
        Optimized the codes about HTTP request.
        Changed the naming method of the folders that save the series videos.
